<resources>
    <string name="app_name">Court Counter</string>
    <string name="action_settings">Settings</string>
    <string name="team_a">Team A</string>
    <string name="o">0</string>
    <string name="three_points">+3 points</string>
    <string name="two_points">+2 points</string>
    <string name="free_throw">Free Throw</string>
    <string name="foul">Foul</string>
    <string name="delete_key">Delete Key</string>
    <string name="team_b">Team B</string>
    <string name="reset">Reset</string>

</resources>
