<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/eight"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"

        >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            tools:context="com.example.peshy.courtcounter.MainActivity">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:padding="16dp"
                android:paddingBottom="16dp"
                android:text="@string/team_a"
                android:textSize="14sp"
                android:textColor=" #616161"
                android:fontFamily="sans-serif-medium"/>

            <TextView
                android:id="@+id/team_a_score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:padding="4dp"
                android:layout_marginBottom="24dp"
                android:text="@string/o"
                android:textSize="56sp"
                android:textColor=" #ffffff"
                android:fontFamily="sans-serif-light"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginBottom="8dp"
                android:layout_marginRight="24dp"
                android:onClick="addThreeForTeamA"
                android:padding="4dp"
                android:text="@string/three_points" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginBottom="8dp"
                android:layout_marginRight="24dp"
                android:onClick="addTwoForTeamA"
                android:padding="4dp"
                android:text="@string/two_points" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginBottom="8dp"
                android:layout_marginRight="24dp"
                android:onClick="addOneForTeamA"
                android:padding="4dp"
                android:text="@string/free_throw" />
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginBottom="8dp"
                android:layout_marginRight="24dp"
                android:onClick="setFoulTeamA"
                android:padding="4dp"
                android:text="@string/foul" />



        </LinearLayout>
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@android:color/darker_gray"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            tools:context="com.example.peshy.courtcounter.MainActivity">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:padding="16dp"
                android:paddingBottom="16dp"
                android:text="@string/team_b"
                android:textSize="14sp"
                android:textColor=" #616161"
                android:fontFamily="sans-serif-medium"/>

            <TextView
                android:id="@+id/team_b_score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:padding="4dp"
                android:layout_marginBottom="24dp"
                android:text="@string/o"
                android:textSize="56sp"
                android:textColor=" #ffffff"
                android:fontFamily="sans-serif-light"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="24dp"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="24dp"
                android:onClick="addThreeForTeamB"
                android:padding="4dp"
                android:text="@string/three_points" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginBottom="8dp"
                android:layout_marginRight="24dp"
                android:onClick="addTwoForTeamB"
                android:padding="4dp"
                android:text="@string/two_points" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginBottom="8dp"
                android:layout_marginRight="24dp"
                android:onClick="addOneForTeamB"
                android:padding="4dp"
                android:text="@string/free_throw" />
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginBottom="8dp"
                android:layout_marginRight="24dp"
                android:onClick="addOneForTeamB"
                android:padding="4dp"
                android:text="@string/foul" />

        </LinearLayout>

    </LinearLayout>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/reset"
        android:onClick="resetScore"
        />
</RelativeLayout>
